--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,19 @@
-<h3>Welcome!</h3>
+<%= render "shared/content_title", title: "All Post" %>
 
-<p>This is the Postit template. You've access the PostsController, index action. This is the index template. Find me under app/views/posts folder.</p>
+<% @posts.each do |post| %>
+  <div class="row">
+    <div class="span8 well">
+      <%= render post.categories %>
+      <h4><%= link_to post.title, post.url%></h4>
+      <p>
+        <%= post.description %>
+      </p>
+      <span class="quiet">posted by</span>
+      <%= post.user ? post.user.username : "Unknown" %>
+      <small>at <%= post.created_at %></small>
+      <span>
+        <%= link_to pluralize(post.comments.size, "Comment"), post_path(post) %>
+      </span>
+    </div>
+  </div>
+<% end %>
