--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,3 @@
-<span class="badge"><%= category.name %></span>
+<span class="badge">
+  <%= link_to category.name, category_path(category), class: "category_link" %>
+</span>
