--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,9 +3,20 @@
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
   <li>
-    <%= link_to 'link', '' %>
   </li>
 </ul>
+<div class="nav_item btn-group">
+  <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+  Categories<span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu">
+    <% @categories.each do |category| %>
+      <li><%= link_to category.name, category_path(category) %></li>
+    <% end %>
+    <li class="divider"></li>
+    <li><%= link_to "+ New Category", new_category_path %></li>
+  </ul>
+</div>
 <div class="nav_item">
   <%= link_to "New Post", new_post_path, class: "btn btn-success btn-small" %>
 </div>
