--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,13 +12,6 @@
 </p>
 <hr/>
 
-<!-- <% @comments.each do |comment| %>
-  <div class="well">
-    <h4><%= comment.user ? comment.user.username : "Unknown" %></h4>
-    <p>
-      <%= comment.body %>
-    </p>
-  </div>
-<% end %> -->
+<%= render @comments %>
 
 <%= link_to "Back", posts_path %>
