--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,12 @@
-<div class="well">
-  <%= form_for @category do |f| %>
-    <%= render "shared/errors", errors: @category.errors %>
-    <div class="control-group">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-    </div>
-    <%= f.submit class: "btn btn-primary" %>
-  <% end %>
+<div class="row">
+  <div class="well span8">
+    <%= form_for @category do |f| %>
+      <%= render "shared/errors", errors: @category.errors %>
+      <div class="control-group">
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+      </div>
+      <%= f.submit class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
