--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,10 +13,29 @@
     <% @categories.each do |category| %>
       <li><%= link_to category.name, category_path(category) %></li>
     <% end %>
-    <li class="divider"></li>
-    <li><%= link_to "+ New Category", new_category_path %></li>
+    <% if logged_in? %>
+      <li class="divider"></li>
+      <li><%= link_to "+ New Category", new_category_path %></li>
+    <% end %>
   </ul>
 </div>
-<div class="nav_item">
-  <%= link_to "New Post", new_post_path, class: "btn btn-success btn-small" %>
-</div>
+
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to "New Post", new_post_path, class: "btn btn-success" %>
+  </div>
+
+  <div class="nav_item">
+    <%= link_to "Log Out", logout_path, class: "btn" %>
+  </div>
+
+<% else %>
+  <div class="nav_item">
+    <%= link_to "Log in", login_path, class: "btn" %>
+  </div>
+
+  <div class="nav_item">
+    <%= link_to "Register", new_user_path, class: "btn btn-success" %>
+  </div>
+
+<% end %>
