--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,8 @@
-<% if logged_in? %>
+<!-- <% if logged_in? %>
   <p class="pull-right">
     [<%= link_to "Edit this category", edit_category_path(@category) %>]
   </p>
-<% end %>
+<% end %> -->
 
 <% all_posts_link = link_to("All Posts", posts_path) %>
 
