--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,8 +25,32 @@
     <%= link_to "New Post", new_post_path, class: "btn btn-success" %>
   </div>
 
+  <div class="btn-group nav_item">
+    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+      <%= current_user.username %> <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li>
+        <%= link_to edit_user_path(current_user) do %>
+          <i class="icon-pencil"></i> edit profile
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to user_path(current_user) do %>
+          <i class="icon-user"></i> view profile
+        <% end %>
+      </li>
+      
+      <li>
+        <%= link_to logout_path do %>
+          <i class="icon-circle-arrow-left"></i> logout
+        <% end %>
+      </li>
+    </ul>
+  </div>
+
   <div class="nav_item">
-    <%= link_to "Log Out", logout_path, class: "btn" %>
   </div>
 
 <% else %>
