Modulize voteable and sluggable

--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row span8">
   <% if errors.any? %>
     <div class="alert alert-error span8">
       <h5>Please fix the following errors</h5>
