--- a/app/views/votes/_vote.html.erb
+++ b/app/views/votes/_vote.html.erb
@@ -1,9 +1,6 @@
-<div class="span0 well text-center"
+<div class="span1 well text-center"
      id="<%= "#{obj.class.name.downcase}_#{obj.id}_vote" %>">
-  <% if logged_in? %>
-    <% @vote = obj.votes.where(user: current_user).first %>
-  <% end %>
-  <% if @vote.nil? %>
+  <% if obj.user_vote(current_user).nil? %>
     <%= link_to up_vote_path, method: :post, remote: true do %>
       <i class="fa fa-chevron-up"></i>
     <% end %>
@@ -15,13 +12,13 @@
     <% end %>
   <% else %>
     <%= link_to up_revote_path, method: :put, remote: true do %>
-      <i class="fa fa-chevron-up <%= "voted" if @vote.vote == true %>"></i>
+      <i class="fa fa-chevron-up <%= "voted" if obj.user_vote(current_user).vote == true %>"></i>
     <% end %>
     <br>
       <%= pluralize(obj.votes_sum, "vote") %>
     <br>
     <%= link_to down_revote_path, method: :put, remote: true do %>
-      <i class="fa fa-chevron-down <%= "voted" if @vote.vote == false %>"></i>
+      <i class="fa fa-chevron-down <%= "voted" if obj.user_vote(current_user).vote == false %>"></i>
     <% end %>
   <% end %>
 </div>
