--- a/app/views/votes/vote_error.js.erb
+++ b/app/views/votes/vote_error.js.erb
@@ -1,2 +1,2 @@
-var error_msgs = "id: <%= @vote.id %>, <%= @vote.errors.full_messages.join("\n") %>"
+var error_msgs = "<%= @vote.errors.full_messages.join("\n") %>"
 alert("Something wrong!\n" + error_msgs)
