--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,9 +11,9 @@
   </a>
   <ul class="dropdown-menu">
     <% @categories.each do |category| %>
-      <li><%= link_to category.name, category_path(category) %></li>
+      <li><%= link_to "#{category.name} (#{category.posts.size})", category_path(category) %></li>
     <% end %>
-    <% if logged_in? %>
+    <% if logged_in? && current_user.is_admin? %>
       <li class="divider"></li>
       <li><%= link_to "+ New Category", new_category_path %></li>
     <% end %>
@@ -41,7 +41,7 @@
           <i class="icon-user"></i> view profile
         <% end %>
       </li>
-      
+
       <li>
         <%= link_to logout_path do %>
           <i class="icon-circle-arrow-left"></i> logout
