--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<% if logged_in? && is_creator?(@post) %>
+<% if logged_in? && (is_creator?(@post) || current_user.is_admin?) %>
   <p class="pull-right">
     [<%= link_to "edit this post", edit_post_path(@post) %>]
   </p>
