--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,10 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation %>
       </div>
+      <div class="control-group">
+        <%= f.label :time_zone %>
+        <%= f.time_zone_select :time_zone %>
+      </div>
       <%= f.submit class: "btn btn-primary" %>
     <% end %>
   </div>
